# ODigit

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.AyVIpp  build.ps1
cmake/: GetVersionFromGitTag.cmake
packaging/: Installer.ifp  Installer.iss  Installer.nsi
src/: main.cpp  main.qml  qml.qrc
src/components/buttons/: IconButton.qml
src/components/inputs/: Button.qml  Input.qml  Slider.qml  SpinBox.qml
src/components/others/: Ruller.qml
src/components/static/: AddText.qml  Compressor.qml  Process.qml
src/components/static/toolbar/: Draw.qml  Home.qml  Side.qml
src/components/views/: PolygonEditor.qml
src/core/: macros.h
src/core/gui/components/: editor.cpp  editor.hpp  ruler.cpp  ruler.hpp
src/core/gui/qml/controls/: button.qml  choice.qml  input.qml  slider.qml  spinbox.qml
src/core/gui/qml/dialogs/helpers/: add_text.qml  contours_simplify.qml  simplify.qml
src/core/gui/qml/dialogs/message/: info.qml
src/core/gui/qml/templates/: editor.qml  process.qml
src/core/gui/qml/templates/toolbar/: home.qml  side.qml
src/core/gui/scripts/: clipboard.cpp  clipboard.hpp  config.cpp  config.hpp  process.cpp  process.hpp  registration.cpp  registration.hpp  translator.cpp  translator.hpp
src/core/utils/: algebra.cpp  algebra.hpp  dxf.cpp  dxf.hpp  hash.cpp  hash.hpp  image.cpp  image.hpp  polygon.cpp  polygon.hpp
src/dialogs/: about.qml  registration.qml  settings.qml
src/qml/: About.qml  Settings.qml  Shared.qml  components  main.qml  qml.qrc  qtquickcontrols2.conf  resources  scripts  translations
src/resources/: config.json
src/resources/statics/: config.json
src/resources/themes/: dark.json  light.json
src/resources/translations/: tr_en.json  tr_fa.json
src/scripts/: config.h  editor.h  main.cpp  process.h  ruler.h  translator.h
tests/: main.py
translations/: tr_en.json  tr_fa.json
